# pyslope

./: .flake8  Makefile  README.md  pyproject.toml
experiments/: sandbox.py
src/slope/: solvers.py  utils.py
