[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "slope"
description = "Basic Python Toolbox for SLOPE"
version = "0.1.0"
requires-python = ">=3.7"
keywords = ["slope"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    "appdirs",
    "libsvmdata",
    "matplotlib >= 3.6",
    "numba >= 0.56",
    "numpy >= 1.12",
    "scikit-learn >= 1.0",
    "scipy >= 1.9",
    "rpy2"
]

[tool.isort]
profile = "black"

